--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <li><a href="{% url 'master_location' %}">Master - Location</a></li>
     {% endif %}
     <li><a href="{% url 'hotel_dashboard' %}">Hotel Dashboard</a></li>
-    <li><a href="{% url 'breakfast_vouchers' %}">Breakfast Vouchers</a></li>
+    <!-- Removed Breakfast Vouchers link as requested -->
   </ul>
 </div>
 {% endblock %}
