--- a/templates/dashboard/voucher_detail.html
+++ b/templates/dashboard/voucher_detail.html
@@ -135,7 +135,7 @@
                 <div class="card-body text-center">
                     {% if voucher.qr_image %}
                         <div class="qr-display mb-4">
-                            <img id="qrModalImage" src="data:image/png;base64,{{ voucher.qr_image }}" alt="QR Code" 
+                            <img id="qrModalImage" src="data:image/png;base64,{{ voucher.qr_image|escapejs }}" alt="QR Code" 
                                  class="img-fluid border rounded-3" 
                                  style="width: 100%; height: 250px; object-fit: contain; background: white; padding: 15px; cursor: pointer; border: 2px solid #e9ecef;"
                                  onclick="showQRFullscreen()">
@@ -146,7 +146,7 @@
                                 <i class="fas fa-expand me-2"></i>View Fullscreen
                             </button>
                             
-                            <a href="data:image/png;base64,{{ voucher.qr_image }}" 
+                            <a href="data:image/png;base64,{{ voucher.qr_image|escapejs }}" 
                                download="voucher_{{ voucher.voucher_code }}.png" 
                                class="btn btn-success">
                                 <i class="fas fa-download me-2"></i>Download QR
@@ -240,7 +240,7 @@
             </div>
             <div class="modal-body text-center py-5" style="background: white;">
                 {% if voucher.qr_image %}
-                    <img src="data:image/png;base64,{{ voucher.qr_image }}" alt="QR Code" 
+                    <img src="data:image/png;base64,{{ voucher.qr_image|escapejs }}" alt="QR Code" 
                          class="img-fluid border rounded-3" 
                          style="max-width: 100%; max-height: 500px; background: white; padding: 20px;">
                     <div class="mt-4">
@@ -253,7 +253,7 @@
                 {% endif %}
             </div>
             <div class="modal-footer border-0 justify-content-center">
-                <a href="data:image/png;base64,{{ voucher.qr_image }}" 
+                <a href="data:image/png;base64,{{ voucher.qr_image|escapejs }}" 
                    download="voucher_{{ voucher.voucher_code }}.png" 
                    class="btn btn-success">
                     <i class="fas fa-download me-2"></i>Download QR Code
